# github-evidence

./: .gitignore  README.md  pyproject.toml
gh_evidence/: __init__.py  cli.py  gh_ops.py  git_ops.py  llm_summary.py  writer.py
